# Careers-Website-v2

./: .replit  README.md  app.py  database.py  pyproject.toml
static/: faqs_background.avif
templates/: application_form.html  application_sbumitted.html  banner.html  bootstrap.html  faqs.html  footer.html  home.html  jobitem.html  jobpage.html  login.html  nav.html  signup.html
